styles/main.css
/*General styles*/
body {
  font: 'Open Sans', sans-serif;
}
.container {
  padding: 0px;
}
.helpText{
  font-size: 14px;
  margin-top: -4px;
}
.lead{
  margin-bottom: 0;
}

.chartTitle {
  padding-left: 40px;
}

.controlItem {
  margin-top: 5px;
  /*border: 1px dotted;*/
}

svg{
  font: 10px 'Open Sans', sans-serif;
}

/*Level one and two containers*/
#lead-section {

}
#app-area {


}
 #controls-area {
  /*background-color: #E9F2F8;*/
 }
 /*#C7C7C7#B3D3E7*/
 #chart-area{
  padding: 15px 5px 5px 5px;
  background-color: #C7C7C7;
  /*margin-top: 10px;*/
 }
 .bottomText {
     font-size: 9px;
 }
 .bottomText p{
   margin: 0 !important;
 }
/*All other level containers*/
#brush-container {

}

#brushDiv{
  height: 100px;
}

#controls-row-1 {

}
#controls-row-2 {
  margin-top: 15px;

}

#prodChart-container {

}

#prodChart{
  height: 240px;
}
#prodChart-x-dropdown{
  margin-top: 2px;
  margin-bottom: 0px;
}

#empChart-container {

}

#empChart{
  height: 240px;
}
#empChart-x-dropdown{
  margin-top: 2px;
  margin-bottom: 0px;
}

/*Common axis styling*/
.x--scatterAxis .domain, .y--scatterAxis .domain {
  stroke: black;
  stroke-width:1px;
  /*stroke-opacity: .5;*/
}
.tick line {
 stroke: lightgrey;
 /*stroke-opacity: .8;*/
}
.tick text {
  /*fill: green;*/
  font-size: 11px;
}

/*Scatter Plot CSS*/
.dots{
}
.selected{
  stroke: green;
  stroke-width: 0.5;
  stroke-opacity: .7;
  fill-opacity: 0.6;
  cursor: pointer;
}
.default {
  cursor: pointer;
  stroke: black;
  stroke-width: 0.5;
  stroke-opacity: 0.3;
  fill-opacity: .1;
  fill: black;
}
.obsText{
  font-size: 12px;
}
.y--scatterTitle {
  font-size: 11px;
}

/*Style the regression lines*/
.mainregLine {
  fill: none;
  stroke: #811078;
  stroke-width: 2px;
  /*stroke-dasharray: 2;*/
  /*stroke-opacity: .7;*/
}
.tempregLine {
  fill: none;
  stroke: #94D7FA;
  stroke-width: 2px;
  /*stroke-dasharray: 2;*/
  /*stroke-opacity: .7;*/
}

/*Brush Css*/
.brushAxis--x .domain, .brushAxis--y .domain{
  stroke: black;
  stroke-opacity: .5;
  stroke-width:1px;
}

.selection {
  /*stroke-width: 1px;*/
  /*stroke: none;*/
  /*stroke: red;*/
}
.mainbrushLine{
  fill: none;
  stroke: #811078;
  stroke-width: 2px;
  stroke-opacity: .5;
}
.tempbrushLine{
  fill: none;
  stroke: #94D7FA;
  stroke-width: 2px;
}

/*Dropdown CSS*/
#countryClassDropdown {
  cursor: pointer;
  /*background-color: #F8F8F8;*/
}
#countryClassDropdown li {
  padding-left: 5px;
}

#xProdDropDown {
  width: 320px;
}
#xEmpDropDown {
  width: 320px;
}
label.appDropDown select {
	padding: 5px 20px 5px 5px;
	background: #f8f8f8;
	color: #444;
	border: 1px solid #aaa;
	border-radius: 0;
	display: inline-block;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	cursor: pointer;
	outline: none;
}
label.appDropDown select:-moz-focusring {
	color: transparent;
	text-shadow: 0 0 0 #444;
}
label.appDropDown select::-ms-expand {
	display: none;
}
/*label.appDropDown:before {
	content: '';
	right: 5px;
	top: 2px;
	width: 30px;
	height: 20px;
	background: #f8f8f8;
	position: absolute;
	pointer-events: none;
	display: block;
}*/
label.appDropDown { position: relative; }
label.appDropDown:after {
	content: '>';
	font: 20px;
	color: #444;
	-webkit-transform: rotate(90deg);
	-moz-transform: rotate(90deg);
	-ms-transform: rotate(90deg);
	transform: rotate(90deg);
	right: 0px;
	top: 0px;
	/*border-bottom: 3px solid #aaa;*/
	position: absolute;
	pointer-events: none;
	width: 30px;
	padding: 0 0 5px 0;
	text-indent: 5px;
}
@media screen\0 {
	label.appDropDown:after {
		width: 38px;
		text-indent: 15px;
		right: 0;
	}
}
@media screen and (min--moz-device-pixel-ratio:0) {
	label.appDropDown select { padding-right: 40px; }
	/*label.appDropDown:before { right: 6px; }*/
	label.appDropDown:after {
		text-indent: 14px;
		right: 6px;
		top: -5px;
		width: 36px;
	}
}

/*Toggle switch for outliers*/

.switch {
  position: relative;
  display: inline-block;
  width: 36px;
  height: 20px;
}

/* Hide default HTML checkbox */
.switch input {display:none;}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #EDEDED;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 16px;
  width: 16px;
  left: 2px;
  bottom: 2px;
  background-color: #C7C7C7;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #63AAC8;
}

input:focus + .slider {
  box-shadow: 0 0 1px #63AAC8;
}

input:checked + .slider:before {
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 20px;
}

.slider.round:before {
  border-radius: 50%;
}

